--- a/web/sites/jamboree-casino/config/sync/views.view.game_list_v3_trimmed.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list_v3_trimmed.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.jamboree_desktop_games_entity.field_all_games_category
     - field.storage.jamboree_desktop_games_entity.field_arcade_game_category
     - field.storage.jamboree_desktop_games_entity.field_arcade_game_filter
     - field.storage.jamboree_desktop_games_entity.field_client_type
@@ -16,10 +17,12 @@ dependencies:
     - field.storage.jamboree_desktop_games_entity.field_game_code_icore
     - field.storage.jamboree_desktop_games_entity.field_game_filter
     - field.storage.jamboree_desktop_games_entity.field_game_filter_games
+    - field.storage.jamboree_desktop_games_entity.field_game_icon_label
     - field.storage.jamboree_desktop_games_entity.field_game_provider
     - field.storage.jamboree_desktop_games_entity.field_game_tag
     - field.storage.jamboree_desktop_games_entity.field_game_thumbnail
     - field.storage.jamboree_desktop_games_entity.field_game_title
+    - field.storage.jamboree_desktop_games_entity.field_game_title_icon
     - field.storage.jamboree_desktop_games_entity.field_game_type
     - field.storage.jamboree_desktop_games_entity.field_provider_product
     - taxonomy.vocabulary.desktop_game_category
@@ -1329,11 +1332,11 @@ display:
         type: data_field
         options:
           field_options:
-            field_game_title:
-              alias: game_title
-              raw_output: false
             id:
               alias: ''
+              raw_output: false
+            field_game_title:
+              alias: game_title
               raw_output: false
             field_enable_game_mobile:
               alias: enable_game_mobile
@@ -1388,6 +1391,18 @@ display:
               raw_output: false
             field_provider_product_export:
               alias: provider_product
+              raw_output: false
+            field_all_games_category_export:
+              alias: all_games_categories
+              raw_output: false
+            field_game_category_export:
+              alias: casino_categories
+              raw_output: false
+            field_game_title_icon_export:
+              alias: game_title_icon
+              raw_output: false
+            field_game_icon_label_export:
+              alias: game_icon_label
               raw_output: false
       pager:
         type: full
@@ -1499,69 +1514,6 @@ display:
           plugin_id: standard
       rendering_language: '***LANGUAGE_entity_translation***'
       fields:
-        field_game_title:
-          id: field_game_title
-          table: jamboree_desktop_games_entity__field_game_title
-          field: field_game_title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         id:
           id: id
           table: jamboree_desktop_games_entity_field_data
@@ -1625,6 +1577,69 @@ display:
           field_api_classes: false
           entity_type: jamboree_desktop_games_entity
           entity_field: id
+          plugin_id: field
+        field_game_title:
+          id: field_game_title
+          table: jamboree_desktop_games_entity__field_game_title
+          field: field_game_title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           plugin_id: field
         field_enable_game_mobile:
           id: field_enable_game_mobile
@@ -2123,66 +2138,6 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_game_provider_export:
-          id: field_game_provider_export
-          table: jamboree_desktop_games_entity__field_game_provider
-          field: field_game_provider_export
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_entity_id
-          settings: {  }
-          group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          field_api_classes: 0
-          plugin_id: field_export
         field_game_filter_export:
           id: field_game_filter_export
           table: jamboree_desktop_games_entity__field_game_filter
@@ -2748,6 +2703,250 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_all_games_category_export:
+          id: field_all_games_category_export
+          table: jamboree_desktop_games_entity__field_all_games_category
+          field: field_all_games_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_category_export:
+          id: field_game_category_export
+          table: jamboree_desktop_games_entity__field_game_category
+          field: field_game_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_title_icon_export:
+          id: field_game_title_icon_export
+          table: jamboree_desktop_games_entity__field_game_title_icon
+          field: field_game_title_icon_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image_export
+          settings:
+            image_style: ''
+            export_alt: 0
+            export_title: false
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_icon_label_export:
+          id: field_game_icon_label_export
+          table: jamboree_desktop_games_entity__field_game_icon_label
+          field: field_game_icon_label_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: 0
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       enabled: true
     cache_metadata:
       max-age: -1
@@ -2757,6 +2956,7 @@ display:
         - request_format
         - url.query_args
       tags:
+        - 'config:field.storage.jamboree_desktop_games_entity.field_all_games_category'
         - 'config:field.storage.jamboree_desktop_games_entity.field_arcade_game_category'
         - 'config:field.storage.jamboree_desktop_games_entity.field_arcade_game_filter'
         - 'config:field.storage.jamboree_desktop_games_entity.field_client_type'
@@ -2765,12 +2965,15 @@ display:
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_game'
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_game_mobile'
         - 'config:field.storage.jamboree_desktop_games_entity.field_external_game_id'
+        - 'config:field.storage.jamboree_desktop_games_entity.field_game_category'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_code_icore'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_filter'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_filter_games'
+        - 'config:field.storage.jamboree_desktop_games_entity.field_game_icon_label'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_provider'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_tag'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_thumbnail'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_title'
+        - 'config:field.storage.jamboree_desktop_games_entity.field_game_title_icon'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_type'
         - 'config:field.storage.jamboree_desktop_games_entity.field_provider_product'
