--- a/web/sites/zedbet/config/sync/views.view.arcade_games_list_v2.yml
+++ b/web/sites/zedbet/config/sync/views.view.arcade_games_list_v2.yml
@@ -530,68 +530,6 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
-        field_game_preview_mode:
-          id: field_game_preview_mode
-          table: node__field_game_preview_mode
-          field: field_game_preview_mode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: boolean_export
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         field_game_keywords:
           id: field_game_keywords
           table: node__field_game_keywords
@@ -1116,6 +1054,69 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_game_preview_mode_export:
+          id: field_game_preview_mode_export
+          table: node__field_game_preview_mode
+          field: field_game_preview_mode_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: boolean
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
       filters:
         status:
           value: '1'
@@ -1254,9 +1255,6 @@ display:
             field_game_subprovider_export:
               alias: subprovider
               raw_output: false
-            field_game_preview_mode:
-              alias: preview
-              raw_output: false
             field_game_keywords:
               alias: keywords
               raw_output: false
@@ -1280,6 +1278,9 @@ display:
               raw_output: false
             field_game_provider_export:
               alias: provider
+              raw_output: false
+            field_game_preview_mode_export:
+              alias: preview
               raw_output: false
     cache_metadata:
       max-age: -1
