--- a/web/sites/zedbet/config/sync/field.field.node.arcade_game.field_game_thumbnail.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.arcade_game.field_game_thumbnail.yml
@@ -29,7 +29,7 @@ settings:
   file_extensions: 'png gif jpg jpeg webp'
   max_filesize: ''
   max_resolution: 325x250
-  min_resolution: 325x250
+  min_resolution: ''
   alt_field: true
   alt_field_required: false
   title_field: false
